# PriceTracker

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.github/: CODEOWNERS  dependabot.yml
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_back_in_stock_alerts.py
apps/api/app/: __init__.py  config.py  db.py  logging.py  main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: __init__.py  notifications.py  users.py  watches.py  webhooks.py
apps/api/app/auth/: __init__.py  clerk.py
apps/api/app/models/: __init__.py
apps/api/app/providers/: __init__.py  adapters.py  base.py  brightdata.py  email.py  factory.py  fake.py
apps/api/app/schemas/: __init__.py
apps/api/app/services/: __init__.py  alerts.py  notifications.py  tracking.py
apps/api/app/stores/: __init__.py  repositories.py
apps/api/app/workers/: celery_app.py  tasks.py
apps/api/fixtures/: fake_prices.example.json
apps/api/scripts/: export_marketplaces.py  export_openapi.py
apps/api/tests/: __init__.py  conftest.py  test_adapters.py  test_alerts.py  test_api.py  test_config.py  test_deploy_validation.py  test_fake_provider.py  test_normalization.py  test_notifications.py  test_preferences.py  test_repositories.py  test_test_database.py  test_watches.py
docs/: architecture.md  deployment.md  go-live.md  marketplaces.json  (+5 more)
(+70 files in other folders)
