[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pricetracker-api"
version = "0.1.0"
description = "Production-shaped PriceTracker FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "pydantic-settings>=2.7",
  "redis>=5.2",
  "celery[redis]>=5.6",
  "httpx>=0.28",
  "PyJWT[crypto]>=2.10",
  "cryptography>=44",
  "svix>=1.42",
  "structlog>=24.4",
  "prometheus-client>=0.21",
  "resend>=2.5",
  "email-validator>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "httpx>=0.28",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Fixtures and tests share one per-test event loop, so an asyncpg connection is
# never handed between loops.
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Ruff 0.16 broadened its implicit defaults. Keep the established project
# policy explicit so `uv run --with ruff` is stable when CI resolves "latest".
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true
